# tvge

./: CMakeLists.txt  README.md  buffer.cpp  buffer.hpp  camera.cpp  camera.hpp  descriptors.cpp  descriptors.hpp  device.cpp  device.hpp  first_app.cpp  first_app.hpp  frame_info.hpp  game_object.cpp  game_object.hpp  keyboard_movement_controller.cpp  keyboard_movement_controller.hpp  main.cpp  model.cpp  model.hpp  pipeline.cpp  pipeline.hpp  renderer.cpp  renderer.hpp  simple_render_system.cpp  simple_render_system.hpp  swap_chain.cpp  swap_chain.hpp  utils.hpp  vcpkg.json  window.cpp  window.hpp
shaders/: simple_shader.frag  simple_shader.vert
